# githubbench-delta

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_REPORT.md  INTEGRATION_REPORT.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/: agents.yaml  datasets.yaml  default.yaml  metrics.yaml
configs/research/: evidence_registry.yaml  projects.yaml
configs/research/experiments/: E0a.yaml  E0b.yaml  E0c.yaml  E0d.yaml  E1.yaml  E10.yaml  E2.yaml  E3.yaml  E4.yaml  E5.yaml  E6.yaml  E7.yaml  E8.yaml  E9.yaml
configs/samples/: minimal.yaml
datasets/edge_cases/: README.md
datasets/fixtures/go_rest_api/: ISSUES.md  README.md  go.mod
datasets/fixtures/java_backend/: ISSUES.md  README.md
datasets/fixtures/mini_repo/: README.md
datasets/fixtures/py_cli/: ISSUES.md  README.md
datasets/fixtures/py_rag/: ISSUES.md  README.md
datasets/fixtures/rust_service/: Cargo.toml  ISSUES.md  README.md
datasets/fixtures/ts_frontend/: ISSUES.md  README.md  package.json
datasets/real/: README.md
datasets/regressions/: README.md
datasets/synthetic/: README.md  manifest.json  patient_harold_benedict_contraindication.json  patient_lim_wei_ming_missing_finding.json  patient_mei_ling_tan_incomplete.json  patient_patricia_ong_hallucination_risk.json  patient_siti_rohana_complete.json
datasets/v1/: README.md  dataset.yaml  manifest.json  tasks.jsonl
datasets/v1/authors/: _common.py  corpus.py  edge_cases.py  go_tasks.py  java_tasks.py  python_tasks.py  rust_tasks.py  typescript_tasks.py
datasets/v2/: README.md
docs/: api.md  architecture.md  benchmark.md  cli.md  configuration.md  contributing.md  dashboard.md  engineering_audit.md  evaluation.md  evaluation_methodology.md  faq.md  frontend.md  healthcare_evaluation.md  index.md  installation.md  memorization.md  mentor_session_prep.md  observatory.md  phases.md  pipeline.md  plugins.md  providers.md  quickstart.md  release.md  reports.md  research_evidence_gaps.md  research_execution.md  self_study_notes.md  showcase.md  troubleshooting.md
docs/assets/example-benchmark/: leaderboard.csv  summary.json  task_list.txt
docs/assets/example-report/: exp_3c790a482f784d21_agent_comparison.html  exp_3c790a482f784d21_agent_comparison.md  exp_3c790a482f784d21_technical.html
docs/assets/live-benchmark/: exp_6afa2ce533ba4e0a_BENCHMARK_REPORT.md
docs/assets/memorization/: README.md
docs/assets/observatory/: README.md  history.jsonl  index.json
examples/: README.md
examples/01_single_experiment/: README.md  run.sh
examples/02_multi_agent_compare/: README.md  run.sh
examples/03_benchmark_execution/: README.md  run.sh
examples/04_report_generation/: README.md  run.sh
examples/05_dashboard/: README.md  run.sh
frontend/: .env.example  package-lock.json
frontend/src/: routeTree.gen.ts  styles.css  vite-env.d.ts
frontend/src/components/: ApiStates.tsx  AppLayout.tsx
frontend/src/hooks/: useApiQuery.ts
frontend/src/lib/: api.ts  (+5 more)
scripts/: build_fixtures.py  build_v1_corpus.py  check_packaging.sh
src/githubbench_delta/: __init__.py  cli.py
tests/: conftest.py
tests/perf/: test_perf_smokes.py
tests/regression/: test_dry_run_benchmark.py
tests/unit/: test_agent_lifecycle.py  test_api_cases.py  test_api_facade.py  test_api_synthetic.py  test_benchmark_runner.py  test_cli_api.py  test_config.py  test_corpus_v1.py  test_dataset_loaders.py  test_dataset_validators.py  test_event_store.py  test_healthcare_assess.py  test_healthcare_evaluation.py  test_manifest.py  test_memorization_engine.py  test_memorization_helpers.py  test_models.py  test_observatory_history.py  test_observatory_ingest.py  test_prompts.py  test_providers.py  test_registries.py  test_repo_fingerprint.py  test_research_artifacts.py  test_research_cli.py  test_research_power.py  test_research_registry.py  test_research_stats.py  test_retry.py  test_synthetic_fixtures.py  test_task_catalog.py  test_task_validation.py  test_tool_registry.py  test_trajectory_logger.py
(+300 files in other folders)
