[project]
name = "githubbench-delta"
version = "0.1.0"
description = "Production AI evaluation framework for comparing coding agents on GitHub engineering tasks."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "GitHubBench-Delta Contributors" }]
keywords = ["evaluation", "agents", "github", "benchmark", "llm"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "gitpython>=3.1.43",
    "PyGithub>=2.4.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "kaleido>=0.2.1",
    "weasyprint>=62.0",
    "duckdb>=1.1.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
githubbench = "githubbench_delta.cli:app"

[project.urls]
Homepage = "https://github.com/githubbench-delta/githubbench-delta"
Documentation = "https://github.com/githubbench-delta/githubbench-delta/tree/main/docs"
Changelog = "https://github.com/githubbench-delta/githubbench-delta/blob/main/CHANGELOG.md"
Issues = "https://github.com/githubbench-delta/githubbench-delta/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Non-Python package data (templates/static) ships with the package tree under src/.
# Do not force-include those paths — hatchling already packs them and duplicates fail the build.

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/docs",
    "/tests",
    "/examples",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "types-PyYAML>=6.0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "perf: lightweight performance smoke tests",
    "regression: deterministic benchmark regression smokes",
]

[tool.coverage.run]
source = ["githubbench_delta"]
branch = true
omit = [
    "*/prompts/templates/*",
    "*/dashboard/templates/*",
    "*/reports/templates/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# Typer idioms use typer.Option() in defaults; B008 is noisy for CLI entrypoints.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Phase 8: avoid drive-by logic edits in locked methodology packages.
"src/githubbench_delta/metrics/**" = ["E501", "SIM108", "SIM102"]
"src/githubbench_delta/dashboard/**" = ["UP046", "E501"]
"src/githubbench_delta/reports/**" = ["SIM102", "E501"]
"src/githubbench_delta/pipeline/**" = ["E501", "SIM108", "SIM102"]
"src/githubbench_delta/datasets/**" = ["E501", "SIM108", "SIM102"]
"src/githubbench_delta/evals/**" = ["E501", "SIM108", "SIM102"]
"tests/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["githubbench_delta"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false
pretty = true

[[tool.mypy.overrides]]
module = [
    "githubbench_delta.datasets.*",
    "githubbench_delta.metrics.*",
    "githubbench_delta.evals.*",
    "githubbench_delta.dashboard.*",
    "githubbench_delta.reports.*",
    "githubbench_delta.pipeline.*",
]
ignore_errors = true
